@@ -1,3 +1,4 @@
+* Show warehouse in user status if not unique
 * Add cost price revision
 * Add wizard to modify product cost price
 * Add cron task to recompute product cost
